--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
       <version>5.3.13</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
