--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
     </dependency>
 
 
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+
   </dependencies>
 
   <build>
