--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
             <version>2.13.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.13.Final</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
