--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,4 +1,6 @@
 error.name = name must be more than 3 characters
 error.price = price should be greater then 1000
+form.product.name=Product Name
+form.product.price=Product Price
 index.page.home=Home
 product.add=Add your product
