--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
