--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -4,3 +4,21 @@ form.product.name=Product Name
 form.product.price=Product Price
 index.page.home=Home
 product.add=Add your product
+
+home.page=Home
+product.page=Products
+about.page=About
+contact.page=Contact
+updateAccount.page=Update Account
+logout.page=Logout
+cart.page=Cart
+admin.page=Admin
+login.page=Login
+register.page=Register
+
+Size = {0} must be between between {2} and {1} character long
+
+NotEmpty.customer.customerName = Name can not be blank
+Size.customer.customerName = Name must be between {2} and {1} character long
+
+Phone.customer.custometPhoneNumber =  Enter a valid phone number like 09xxxxxxxxx
