adding some features on online shop

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -21,4 +21,4 @@ Size = {0} must be between between {2} and {1} character long
 NotEmpty.customer.customerName = Name can not be blank
 Size.customer.customerName = Name must be between {2} and {1} character long
 
-Phone.customer.custometPhoneNumber =  Enter a valid phone number like 09xxxxxxxxx
+Phone.customer.customerPhoneNumber =  Enter a valid phone number like 09xxxxxxxxx
