--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,14 @@
             <version>8.0.27</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+
+
         <!--    ORM End    -->
 
         <dependency>
