--- a/src/main/resources/props/application.properties
+++ b/src/main/resources/props/application.properties
@@ -4,10 +4,20 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
 logging.level.root=info
 #logging.level.com.peyman.onlineshop.sevice=error
 
 server.port=8080
 server.servlet.context-path=/
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.group.custom.show-components=always
+management.endpoint.health.group.custom.show-details=always
+info.app.name=Online Shop
+info.app.author.name=Dodangeh
+info.company.location=Tehran
+
+#spring.profiles.active=prod
 
